samba (2:3.4.5~dfsg-2) UNRELEASED; urgency=low

  * Revert the "bashisms" fix from version 2:3.3.0~rc2-4; "local foo=bar"
    is explicitly allowed by Policy now, and this change introduced a
    syntax error.  Closes: #566946.

 -- Steve Langasek <vorlon@debian.org>  Mon, 25 Jan 2010 20:28:24 -0800

samba (2:3.4.5~dfsg-1) unstable; urgency=low

  * New upstream release. Bugs fixed by this release:
    - Memory leak in smbd. Closes: #538819, #558453
  * Declare a versioned dependency of winbind and samba on libwbclient0
    Closes: #550481
  * A few lintian fixes:
  * Drop /var/run/samba from samba-common. The directory is created
    by init scripts when needed.
  * No longer prepend a path to the mksmbpasswd call in samba.postinst.
    This prevents the local administrator to use a replacement version
    for some local reason.

 -- Christian Perrier <bubulle@debian.org>  Sat, 23 Jan 2010 12:16:42 +0100

samba (2:3.4.4~dfsg-1) unstable; urgency=low

  * New upstream version.
  * Drop all RFC files from upstream source, therefore using a "~dfsg"
    suffix to upstream version number.
  * Bugs fixed upstream:
    - fixed list of workgroup servers in libsmbclient. 
      Closes: #555462, #561148
    - fixed documentation of the credentials file format in
      mount.cifs(8). Closes: #552250

 -- Christian Perrier <bubulle@debian.org>  Thu, 14 Jan 2010 20:16:34 +0100

samba (2:3.4.3-2) unstable; urgency=low

  [ Christian Perrier ]
  * Switch to source format 3.0 (quilt)
  * Better adapt "add machine script" example to adduser
    Thanks to Heiko Schlittermann for the suggestion
    Closes: #555466

  [ Steve Langasek ]
  * The "I hate non-declarative alternatives" upload:
    - debian/samba{,-common}.prerm: don't call update-alternatives --remove
      on upgrade, /do/ call it on other invocations of the prerm script.  If
      these tools ever go away, the removal needs to be handled on upgrade by
      the maintainer scripts of the new package version.