@@ -229,7 +229,7 @@ binary-arch: build install
 	DH_OPTIONS= dh_installinit -psamba -- "defaults 20 19"
 	DH_OPTIONS= dh_installinit -pwinbind
 	dh_installcron 
-	for pkg in samba samba-common smbfs winbind; do \
+	for pkg in samba samba-common winbind; do \
 	  install -m 0644 -D debian/$$pkg.lintian debian/$$pkg/usr/share/lintian/overrides/$$pkg || exit; \
 	done
 	dh_installchangelogs -Nlibpam-smbpass
@@ -243,11 +243,6 @@ binary-arch: build install
 	# Upstream makefile installs this using "install" without -m, so
 	# it becomes executable
 	chmod a-x debian/libsmbclient-dev/usr/include/libsmbclient.h
-
-ifeq ($(mount_cifs),yes)
-	chmod u+s debian/smbfs/sbin/mount.cifs
-	chmod u+s debian/smbfs/sbin/umount.cifs
-endif
 
 	# Set some reasonable default perms for the samba logdir.
 	chmod 0750 debian/samba-common/var/log/samba/
