@@ -1,2 +1,0 @@
-smbfs: setuid-binary sbin/mount.cifs 4755 root/root
-smbfs: setuid-binary sbin/umount.cifs 4755 root/root
